# Algoritmica

./: .gitignore
P1/: .gitignore  CMakeLists.txt  Datos.txt  Vector.hpp  ejemplo_gnuplot.sh  funcionesAuxiliares.cpp  funcionesAuxiliares.hpp  main.cpp
P1/images/: ejemplo_gnuplot.sh  graficas.sh  grafico.eps  graficos.eps  quicksort.eps  quicksort.txt  sacudida.eps  sacudida.txt
P1/src/: Vector.cpp  Vector.hpp  funcionesAuxiliares.cpp  funcionesAuxiliares.hpp  main.cpp  quicksort.sh  sacudida.sh
P2/: CMakeLists.txt
P2/images/: Hanoi.eps  Hanoi.txt  RecursividadConTabla.eps  RecursividadConTabla.txt  RecursividadConTabla.txt.eps  SinRecursividad.eps  SinRecursividad.txt  SinRecursividad.txt.eps  SoloRecursividad.eps  SoloRecursividad.txt  SoloRecursividad.txt.eps  hanoi.txt  hanoi.txt.eps
P2/src/: Datos.cpp  Datos.hpp  Tiempo.cpp  Tiempo.hpp  funcionesAuxiliares.cpp  funcionesAuxiliares.hpp  grafico.sh  main.cpp
P3/: CMakeLists.txt
P3/src/: Entero.cpp  Entero.hpp  entero_unittest.cpp  funciones.cpp  funciones.hpp  main.cpp
P4/: CMakeLists.txt
P4/src/: Datos.cpp  Datos.hpp  Material.cpp  Material.hpp  Solucion.hpp  datos_unittest.cpp  material_unittest.cpp  solucion_unittest.cpp
P4/src/opcion-B/: Datos.cpp  Datos.hpp  Material.cpp  Solucion.cpp  datos_unittest.cpp  funciones.cpp  main.cpp  solucion_unittest.cpp
P4/src/opcion-B/tests/: datos_unittest.cpp  material_unittest.cpp  solucion_unittest.cpp
P4/src/opcion-C/: Edge.cpp  Edge.hpp  Graph.cpp  Graph.hpp  Vertex.cpp  Vertex.hpp  funcionesAuxiliares.cpp  funcionesAuxiliares.hpp  main.cpp
P4/src/opcion-C/test/: grafo_unittest.cpp
P4/src/opcion-C/txt/: nuevo.txt
P5/: CMakeLists.txt
P5/docs/: informe.odt  mochila.eps  mochila.txt
P5/src/: Datos.cpp  Datos.hpp  Material.cpp  Material.hpp  Solucion.cpp  Solucion.hpp  funciones.cpp
P5/src/Cambio/: Euros.txt  FuncionesAuxiliares.cpp  FuncionesAuxiliares.hpp  SistemaMonetario.hpp
P5/src/cambio/: Moneda.cpp  Moneda.hpp  SistemaMonetario.cpp  SistemaMonetario.hpp  funciones.cpp  funciones.hpp  main.cpp
P5/src/cambio/txt/: Euros1.txt
P5/src/mochila/: Datos.cpp  Datos.hpp  Estadistica.cpp  Estadistica.hpp  Material.cpp  Solucion.cpp  Solucion.hpp  funciones.cpp  funciones.hpp  main.cpp
P6/: CMakeLists.txt
P6/src/: macros.hpp
P6/src/integracion/: funciones.cpp  funciones.hpp  integral.cpp  main.cpp
P6/src/problemaViajero/: Graph.cpp  funcionesAuxiliares.cpp  funcionesAuxiliares.hpp
P6/src/problemaViajero/txt/: Espana.txt  matrizEspana.txt
