CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(P4)
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
set (PROJECT_SOURCE_DIR "./src/")
SET(CMAKE_CXX_FLAGS "-g -lgcov --coverage")

# add_executable(practica3 ${PROJECT_SOURCE_DIR}main.cpp ${PROJECT_SOURCE_DIR}Entero.cpp ${PROJECT_SOURCE_DIR}funciones.cpp)
add_executable(testMaterial ${PROJECT_SOURCE_DIR}material_unittest.cpp ${PROJECT_SOURCE_DIR}Material.cpp)
target_link_libraries(testMaterial ${GTEST_LIBRARIES} pthread)
add_executable(testDatos ${PROJECT_SOURCE_DIR}datos_unittest.cpp ${PROJECT_SOURCE_DIR}Material.cpp ${PROJECT_SOURCE_DIR}Datos.cpp)
target_link_libraries(testDatos ${GTEST_LIBRARIES} pthread)
